fix features section cursor pointer on mobile deviceces

--- a/styles/features.css
+++ b/styles/features.css
@@ -84,6 +84,20 @@
   transform: scale(1.1);
 }
 
+@media (max-width: 500px) {
+  .browse-solution {
+    cursor: none;
+  }
+
+  .practice-mode {
+    cursor: none;
+  }
+
+  .game-selection {
+    cursor: none;
+  }
+}
+
 .practice-mode__description {
   font-size: 20px;
   color: #001731;
